# crubadan-web

./: LICENSE  Makefile  README.md  crubadan-web-front.cabal  crubadan-web.cabal  langpage.css  notes  page.css  template.html  test.hs
back-end/: Makefile  Makefile.debian  crback-init  crbackend  crbackend.init  crubadan-web-back.cabal
back-end/src/: SearchFCGI.hs  SearchTest.hs
back-end/src/Crubadan/: FileIO.hs  Search.hs  Types.hs
content/: acknowledgments.html  applications.html  index.html  writing_systems.html
front-end/: Makefile  crubadan-web-front.cabal
front-end/src/: SearchPage.hs  SearchPageJS.hs
front-end/src/Crubadan/: Net.hs
front-end/src/Crubadan/Front/: JS.hs  Net.hs  Types.hs
front-end/static/: acknowledgments.html  applications.html  front_pages.css  index.html  lang_template.css  lang_template.html  main.css  writing_systems.html
front-end/style/: front_pages.css  main.css  writing_systems.css
shared/: crubadan-web-shared.cabal
shared/src/Crubadan/: Types.hs
shared/src/Crubadan/Shared/: Types.hs
src/: Back.hs  Front.hs
src/Crubadan/: Net.hs  Search.hs
static/: acknowledgments.html  index.html  lang_template.html  languages.html  main.css  writing_systems.css  writing_systems.html
templates/: lang_template.html
