name:                crubadan-web-back
version:             0.1.0.0
synopsis:            Back-end components of the An Crúbadán project website
-- description:         
homepage:            https://github.com/RoboNickBot/crubadan-web
license:             BSD2
author:              RoboNickBot
maintainer:          nicklewchenko92@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable crbackend-fcgi_
  main-is:             SearchFCGI.hs
  other-modules:       Crubadan.Search
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       directory >=1.2 && <1.3,
                       crubadan-web-shared >=0.1 && <0.2,
                       regex-compat,
                       cgi,
                       fastcgi,
                       containers,
                       parsec
  hs-source-dirs:      src
  default-language:    Haskell2010

executable web-back-test
  main-is:             SearchTest.hs
  other-modules:       Crubadan.Search, Crubadan.FileIO
  build-depends:       base >=4.7 && <4.8,
                       directory, crubadan-web-shared, regex-compat,
                       containers, parsec, optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010