name:                crubadan-web-front
version:             0.1.0.0
synopsis:            Front-end components of the An Crúbadán project website
description:         This must be built with the GHC-JS compiler!
homepage:            https://github.com/RoboNickBot/crubadan-web
license:             BSD2
author:              RoboNickBot
maintainer:          nicklewchenko92@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable crubadan-web-front
  main-is:             SearchPage.hs
  other-modules:       Crubadan.Front.Types,
                       Crubadan.Front.JS,
                       Crubadan.Front.Net
  other-extensions:    CPP, OverloadedStrings, ForeignFunctionInterface
  build-depends:       base >=4.7 && <4.8, data-default, text, ghcjs-jquery,
                       ghcjs-base, reactive-banana,
                       crubadan-web-shared >=0.1 && <0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  
