name:                crubadan-web-shared
version:             0.1.0.0
synopsis:            Shared libraries for the components of the An Crúbadán project website
-- description:         
homepage:            https://github.com/RoboNickBot/crubadan-web
license:             BSD2
author:              RoboNickBot
maintainer:          nicklewchenko92@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Crubadan.Shared.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
